--- a/ProjectAnalysis.csproj
+++ b/ProjectAnalysis.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WDAG.cs" />
+    <Compile Include="AcyclicDigraph.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
